finished the page
Implemented a responsive video, pricing and footer.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header id="header">
     <div class="title-with-logo">
-      <img src="/images/duck1.png" id="header-img" alt="rubber duck logo" />
+      <img src="images/duck1.png" id="header-img" alt="rubber duck logo" />
       <h1>Selling Ducks</h1>
     </div>
     <nav id="nav-bar">
@@ -35,28 +35,70 @@
           <img src="images/duck1.png" />
           <div class="f1">
             <h3>Premium Materials</h3>
-            <p>Our rubber ducks use the softest and most comfortable rubber which is sourced locally. This will increase the longevity of your purchase. </p>
-          </div>  
+            <p>Our rubber ducks use the softest and most comfortable rubber which is sourced locally. This will increase
+              the longevity of your purchase. </p>
+          </div>
         </div>
         <div class="feature2">
           <img src="images/duck1.png" />
           <div class="f2">
             <h3>Fast Shipping</h3>
-            <p>We make sure you recieve your rubber duck as soon as we have finished making it. We also provide free returns if you are not satisfied. </p>
-          </div>  
+            <p>We make sure you recieve your rubber duck as soon as we have finished making it. We also provide free
+              returns if you are not satisfied. </p>
+          </div>
         </div>
         <div class="feature3">
           <img src="images/duck1.png" />
           <div class="f3">
             <h3>Quality Assurance</h3>
-            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the buoyancy and softness of your ordered rubber duck. </p>
-          </div>  
+            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
+              buoyancy and softness of your ordered rubber duck. </p>
+          </div>
         </div>
       </div>
     </section>
     <section id="how-it-works"></section>
-    <section id="prices"></section>
+    <iframe id="video" src="https://www.youtube.com/embed/anW4OZ5VnZ8?si=ej7_Fo_9F9lUktdZ" title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen></iframe>
+    <section id="prices">
+      <div class="container">
+        <div class="pricing1">
+          <h3>ORIGINAL</h3>
+          <h4>$8'99</h4>
+          <p>The original</p>
+          <p>Rubber duck that</p>
+          <p>You've always loved</p>
+          <p>And cared for</p>
+          <input id="button" type="button" value="SELECT" />
+        </div>
+        <div class="pricing2">
+          <h3>EXTRA SOFT</h3>
+          <h4>14'99</h4>
+          <p>Improved model</p>
+          <p>Made with</p>
+          <p>Imported rubber</p>
+          <p>From japan</p>
+          <input id="button" type="button" value="SELECT" />
+        </div>
+        <div class="pricing3">
+          <h3>EXTRA LOVING</h3>
+          <h4>$24'99</h4>
+          <p>Made with extra care</p>
+          <p>Extra quality</p>
+          <p>Etra passion</p>
+          <p>And extra love</p>
+          <input id="button" type="button" value="SELECT" />
+        </div>
+        <div class="hidden"></div>
+      </div>
+    </section>
   </main>
+  <footer>
+    <p>Original Ducks</p>
+    <p>Created by Angel Valentino</p>
+  </footer>
 </body>
 
 </html>
